attempt to fix on mobile

--- a/app/assets/stylesheets/partials/_sponsors.scss
+++ b/app/assets/stylesheets/partials/_sponsors.scss
@@ -37,6 +37,16 @@
   }
 
   .media-grid {
+    display: -webkit-box;
+    /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;
+    /* OLD - Firefox 19- (doesn't work very well) */
+    display: -ms-flexbox;
+    /* TWEENER - IE 10 */
+    display: -webkit-flex;
+    /* NEW - Chrome */
+    display: flex;
+    /* NEW, Spec - Opera 12.1, Firefox 20+ */
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
